--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
-.header {
+h1 {
     text-align: center;
+    font-size: 70px;
 }
+
+
+
 
 .wrapper {
     text-align: center;
+    font-size: 35px;
 }
 
 ul {
